<resources>
    <string name="app_name">Scrum Poker</string>

    <string name="option_selected_deck_setting" translatable="false">deck_setting</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Scrum Poker</string>
    <string name="nav_header_subtitle">Camilo A. Rodriguez/Mauricio Marin</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_about">About</string>
    <string name="developers_profile_title">Developers Profile</string>
    <string name="technical_details_title">Technical Details</string>
    <string name="repository_info_title">Repository info</string>
    <string name="open_source_libraries_title">Open-source libraries</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bt_create_room_text">Create Room</string>
    <string name="bt_join_room_text">Join Room</string>
    <string name="bt_offline_mode_text">Offline Mode</string>
</resources>
